# fh-fomanticui

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  core.html  index.html  main.py  nb_cells.html  nbs_to_fh.html  pyproject.toml  railway.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
_proc/: 00_core.ipynb
elements/: button.html  emoji.html  icon.html
fh_fomanticui/: _modidx.py  button.py  fomantic.py  icon.py
fh_ui/: __init__.py  _modidx.py  card.py  fomantic.py  main.py  pico.py
nbs/: 00_core.ipynb  00_semanticui_cards.ipynb  01_nb_cells.ipynb  01_pico.ipynb  01_printing_components.ipynb  02_fomantic.ipynb  02_nbs_to_fh.ipynb  02_xtend_pico.ipynb  _quarto.yml  nbdev.yml
nbs/Elements/: 00_button.ipynb  06_icon.ipynb
nbs/elements/: 03_emoji.ipynb  06_icon.ipynb
nbs/els/: 00_button.ipynb
src/fh_franken_ui/: __init__.py  __main__.py  card.py  main.py
src/fh_ui/: __main__.py  card.py
src/fh_ui/franken_ui/: main.py
src/fh_ui/semantic_ui/: main.py
